# pythonplayground

./: .gitignore  .python-version  README.md  pyproject.toml
src/numberfunc/: README.md  number_generations.py  search.py
tests/: test_find_longest_sequence.py  test_find_number_ids_that_sum_to.py
tests/numberfunc/: test_find_longest_sequence.py  test_find_number_ids_that_sum_to.py
tests_algorithm_challenges/: test_anagram.py  test_array_degree.py  test_hash_twostrings.py  test_hourglass_sum.py  test_new_year_chaos.py  test_palindrome.py  test_rotate_array.py  test_sherlocks_valid_string.py  test_special_string.py  test_string.py  test_string_alternating_characters.py  test_triplets.py
tools/: setupdbcontainer
